--- a/user_management/templates/user_management/forms.html
+++ b/user_management/templates/user_management/forms.html
@@ -1,5 +1,5 @@
 {%extends 'base.html'%}
-
+{% load crispy_forms_tags %}
 {%block content%}
 <div class="container">
     <br>
@@ -7,7 +7,7 @@
     <hr>
     <form method="post" enctype='multipart/form-data'>
         {% csrf_token %}
-        {{ forms.as_p }}
+       {{ forms|crispy }}
         <input type="submit" value="register" class="btn btn-success">
     </form>
 </div>
