--- a/job_seeker_profile/templates/job_seeker_profile/cv.html
+++ b/job_seeker_profile/templates/job_seeker_profile/cv.html
@@ -1,7 +1,31 @@
 {%extends 'base.html'%}
 {% load crispy_forms_tags %}
 {%block content%}
-<form>
-    {{ form.as_p }}
-</form>
+<div class="container">
+    {%if user.is_authenticated%}
+
+    <h1>CV </h1>
+    <hr>
+    <h2>{{cv.id}}</h2>
+    <h2>{{cv.first_name}}</h2>
+    <h2>{{cv.last_name}}</h2>
+    <h4>{{ cv.current_salary }}</h4>
+    <h4>{{ cv.email }}</h4>
+    <h4>{{ cv.about }}</h4>
+    <h4>{{ cv.phone }}</h4>
+    <h4>{{ cv.reference_name }}</h4>
+    <h4>{{ cv.reference_email }}</h4>
+    <h4>{{ cv.reference_phone }}</h4>
+    <h4>{{ cv.gender }}</h4>
+    <h4>{{ cv.mtirial_status }}</h4>
+    <h4>{{ cv.location_id }}</h4>
+    <h4>{{ cv.birth_date }}</h4>
+
+    <strong><a href="{% url 'cv_update' user.id%}">Change Something?</a></strong>
+
+    {%else%}
+    <h3><a href="/login">login</a> or <a href="{% url 'register-user' %}">create account first</a></h3>
+{%endif%}
+</div>
+
 {%endblock%}
