--- a/templates/Home.html
+++ b/templates/Home.html
@@ -6,6 +6,8 @@
 
     {%if user.is_authenticated%}
     <h1>welcome {{user}}</h1>
+    <p><strong><a class="nav-link" href="{% url 'cv' user.id %}">your cv <span class="sr-only">(current)</span></a>
+    </strong></p>
     <button class="btn btn-danger"><a href="/logout">logout</a></button>
     {%else%}
     <br>
