--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -15,6 +15,11 @@
             <li class="nav-item active">
                 <a class="nav-link" href="admin/">Admin <span class="sr-only">(current)</span></a>
             </li>
+            <li class="nav-item active">
+                <a class="nav-link" href="{% url 'createcv' %}">create cv <span class="sr-only">(current)</span></a>
+            </li>
+
+
         </ul>
 
     </div>
