--- a/user_management/templates/registration/register.html
+++ b/user_management/templates/registration/register.html
@@ -3,7 +3,7 @@
 
 <div class="container">
 {%block content%}
-    <form method="POST" class="form-group">
+    <form method="post" class="form-group">
 	{% csrf_token %}
 	{{ form|crispy }}
 		<button type="submit" class="btn btn-success">Register</button>
