--- a/templates/Home.html
+++ b/templates/Home.html
@@ -17,7 +17,7 @@
     <br>
     <br>
     <strong>As Company</strong>
-    <a href="{%url 'login-company'%}"><input type="submit" value="Login" class="btn btn-success"></a>
+    <a href="/login"><input type="submit" value="Login" class="btn btn-success"></a>
     <a href="{%url 'register-company'%}"><input type="submit" value="Resgister" class="btn btn-primary"></a>
 </div>
 {%endif%}
