--- a/job_seeker_profile/templates/job_seeker_profile/createcv.html
+++ b/job_seeker_profile/templates/job_seeker_profile/createcv.html
@@ -6,10 +6,10 @@
 
     <h1>CV maker</h1>
     <hr>
-    <form method="post">
+    <form method="post" action="#">
         {%csrf_token%}
         {{ form |crispy }}
-        <button class="btn btn-success" >create</button>
+        <button class="btn btn-success" >register</button>
     </form>
     {%else%}
     <h3><a href="/login">login</a> or <a href="{% url 'register-user' %}">create account first</a></h3>
